# succinct

./: .travis.yml  HLint.hs  LICENSE  README.markdown  Setup.lhs  Succinct-Builder.html  Succinct-Dictionary-Broadword.html  Succinct-Dictionary-Builder.html  Succinct-Dictionary-Class.html  Succinct-Dictionary-Internal-Binomial.html  Succinct-Dictionary-Internal-Bit.html  Succinct-Dictionary-Internal-Broadword.html  Succinct-Dictionary-Partitioned.html  Succinct-Dictionary-Poppy.html  Succinct-Dictionary-RRR.html  Succinct-Dictionary-RangeMin.html  Succinct-Dictionary-Rank9.html  Succinct-Dictionary-RankNaive.html  Succinct-Dictionary.html  Succinct-Internal-Binomial.html  Succinct-Internal-Bit.html  Succinct-Internal-Broadword.html  Succinct-Internal-Builder.html  Succinct-Internal-Building.html  Succinct-Internal-Decoding.html  Succinct-Internal-Delta.html  Succinct-Internal-Level.html  Succinct-Internal-PopCount.html  Succinct-Internal-Spill.html  Succinct-Internal-StorableBitVector.html  Succinct-Internal-Word4.html  Succinct-RangeMin-Delta.html  Succinct-RangeMin.html  Succinct-Sequence.html  Succinct-Tree-Binary.html  Succinct-Tree-LOUDS-Double.html  Succinct-Tree-LOUDS-Single.html  Succinct-Tree-LOUDS.html  Succinct-Tree-Types.html  doc-index-33.html  (+62 more)
benchmarks/: huTuckerBench.hs  popCountBench.hs  rank9.hs  rank9Bench.hs
cbits/: popcnt.c  sse.c
old/: Single.hs
src/: Succinct-Builder.html  Succinct-Dictionary-Broadword.html  Succinct-Dictionary-Builder.html  Succinct-Dictionary-Class.html  Succinct-Dictionary-Internal-Binomial.html  Succinct-Dictionary-Internal-Bit.html  Succinct-Dictionary-Internal-Broadword.html  Succinct-Dictionary-Partitioned.html  Succinct-Dictionary-Poppy.html  Succinct-Dictionary-RRR.html  Succinct-Dictionary-RangeMin.html  Succinct-Dictionary-Rank9.html  Succinct-Dictionary-RankNaive.html  Succinct-Dictionary-Util-Binomial.html  Succinct-Dictionary-Util-Broadword.html  Succinct-Dictionary.html  Succinct-Internal-Binomial.html  Succinct-Internal-Bit.html  Succinct-Internal-Broadword.html  Succinct-Internal-Builder.html  Succinct-Internal-Building.html  Succinct-Internal-Decoding.html  Succinct-Internal-Delta.html  Succinct-Internal-Level.html  Succinct-Internal-PopCount.html  Succinct-Internal-Spill.html  Succinct-Internal-StorableBitVector.html  Succinct-Internal-Word4.html  Succinct-RangeMin-Delta.html  Succinct-RangeMin.html  Succinct-Sequence.html  Succinct-Tree-Binary.html  Succinct-Tree-LOUDS-Double.html  Succinct-Tree-LOUDS-Single.html  Succinct-Tree-LOUDS.html  Succinct-Tree-Types.html
src/Data/Dictionary/: Broadword.hs  Class.hs  Rank9.hs
src/Succinct/: Builder.hs  Dictionary.hs  RangeMin.hs  Sequence.hs
src/Succinct/Dictionary/: Broadword.hs  Builder.hs  Class.hs  Partitioned.hs  Poppy.hs  RRR.hs  RangeMin.hs  Rank9.hs  RankNaive.hs
src/Succinct/Dictionary/Internal/: Binomial.hs  Bit.hs  Broadword.hs
src/Succinct/Dictionary/Util/: Binomial.hs  Broadword.hs
src/Succinct/Internal/: Binomial.hs  Bit.hs  Broadword.hs  Builder.hs  Building.hs  Decoding.hs  Delta.hs  Level.hs  PopCount.hs  Spill.hs  StorableBitVector.hs  Word4.hs
src/Succinct/RangeMin/: Delta.hs
src/Succinct/RangeMin/Internal/: Delta.hs  Level.hs
src/Succinct/Tree/: Binary.hs  Jacobson.hs  LOUDS.hs  Types.hs
src/Succinct/Tree/LOUDS/: Double.hs  Single.hs
tests/: doctests.hsc  popCountTest.hs  poppyTest.hs  rank9Test.hs  selectWordTest.hs
