name:          succinct
category:      Data, Structures, Succinct
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/succinct
bug-reports:   http://github.com/ekmett/succinct/issues
copyright:     Copyright (C) 2013 Edward A. Kmett
build-type:    Custom
synopsis:      "Succinct" Data Structures

extra-source-files:
  .ghci
  .travis.yml
  .gitignore
  .vim.custom
  CHANGELOG.markdown
  README.markdown
  HLint.hs

description:
  This package is a playground for working with succinct data structures

source-repository head
  type: git
  location: git://github.com/ekmett/succinct.git

-- You can disable the doctests test suite with -f-test-doctests
flag test-doctests
  default: True
  manual: True

-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: True
  manual: True

library
  build-depends:
    base              >= 4     && < 5,
    comonad           >= 4     && < 5,
    ghc-prim,
    profunctors       >= 4     && < 5,
    semigroups        >= 0.11  && < 1,
    vector            >= 0.10  && < 0.11

    -- primitive,
  default-language: Haskell2010

  hs-source-dirs: src
  c-sources: cbits/sse.c

  ghc-options: -Wall -O2
  cc-options: -msse4

  if os(windows)
    cpp-options: -DOS_WINDOWS=1

  if os(darwin)
    ghc-options: -optl -fexceptons
    cpp-options: -DOS_X

  exposed-modules:
    Succinct.Dictionary
    Succinct.Dictionary.Builder
    Succinct.Dictionary.Class
    Succinct.Dictionary.Partitioned
    Succinct.Dictionary.RangeMin
    Succinct.Dictionary.Rank9
    Succinct.Dictionary.RankNaive
    Succinct.Dictionary.RRR
    Succinct.Internal.Binomial
    Succinct.Internal.Bit
    Succinct.Internal.Broadword
    Succinct.Internal.Building
    Succinct.Internal.Decoding
    Succinct.Internal.Delta
    Succinct.Internal.Level
    Succinct.Internal.Spill
    Succinct.Internal.Word4
    Succinct.Tree.Binary
    Succinct.Tree.LOUDS
    Succinct.Tree.Types

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  ghc-options: -w
  hs-source-dirs: tests
  default-language: Haskell2010

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
      base,
      hlint >= 1.7

-- Verify the results of the examples
test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base,
      bytestring,
      containers,
      directory      >= 1.0,
      deepseq,
      doctest        >= 0.9.1,
      filepath,
      semigroups     >= 0.9,
      unordered-containers

  if impl(ghc<7.6.1)
    ghc-options: -Werror

test-suite rank9Test
  type: exitcode-stdio-1.0
  main-is: rank9Test.hs
  hs-source-dirs: tests
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded -rtsopts
  build-depends:
    succinct,
    base,
    HUnit                 >= 1.2,
    test-framework        >= 0.4,
    test-framework-hunit  >= 0.2,
    test-framework-th     >= 0.2


benchmark rank9Bench
  Type: exitcode-stdio-1.0
  main-is: rank9Bench.hs
  hs-source-dirs: benchmarks
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded -rtsopts
  build-depends:
    succinct,
    base,
    criterion    >= 0.8,
    vector
